--- a/ba thesis/stylesvs.tex
+++ b/ba thesis/stylesvs.tex
@@ -64,9 +64,11 @@
 % }}}
 
 % Weitere Pakete {{{
+\usepackage{verbatim}
 \usepackage{tikz}			% Für die Baumstruktur
 \usetikzlibrary{positioning}
 \usepackage[edges]{forest}
+\usepackage{enumitem}        % style nextline für description
 \usepackage{graphicx}       % Einfügen von Graphiken.
 \usepackage{tabu}           % Einfügen von Tabellen.
 \usepackage{multirow}       % Tabellenzeilen zusammenfassen.
